name:                discrimination-ieee754
version:             0.1.0.0
synopsis:            Discrimination of floating-point numbers via their IEEE754 representation.
description:         Support for sorting/grouping by floating-point numbers.
                     Uses the technique described by http://stereopsis.com/radix.html.
license:             BSD3
license-file:        LICENSE
author:              Andrew Pritchard
maintainer:          awpr+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Discrimination.IEEE754
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.8 && <4.9
               , data-binary-ieee754 >=0.4 && <0.5
               , discrimination >=0.2 && <0.3
               , contravariant >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends: base
               , bytestring
               , data-binary-ieee754
               , discrimination
               , QuickCheck
               , test-framework
               , test-framework-quickcheck2 == 0.3.*
               , discrimination-ieee754
