name:                lens-labels
version:             0.1.0.2
synopsis:            Integration of lenses with OverloadedLabels.
description:         Provides a framework to integrate lenses with GHC's
                     OverloadedLabels extension.
homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Changelog.md

library
  exposed-modules:     Lens.Labels
  build-depends:       base >= 4.8 && < 4.11
                     , ghc-prim >=0.4 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
