name:                proto-lens-benchmarks
version:             0.1.0.0
synopsis:            Benchmarks for proto-lens
description:
    This package contains a set of benchmarks for proto-lens.
homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Aden Grue
maintainer:          agrue+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  benchmarks/*.proto

custom-setup
  setup-depends: base >= 4.8 && < 4.10
               , Cabal
               , proto-lens-protoc == 0.2.*

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens.BenchmarkUtil
  default-language: Haskell2010
  build-depends: proto-lens == 0.2.*
               , proto-lens-protoc == 0.2.*
               , base >= 4.8 && < 4.10
               , bytestring == 0.10.*
               , criterion == 1.1.*
               , deepseq == 1.4.*
               , optparse-applicative >= 0.12 && < 0.14

-- The build-depends in the benchmarks don't specify version bounds, since
-- those are already constrained by the library rule.

Benchmark int-packing
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          IntPacking.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.IntPacking
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family
                 , proto-lens
                 , proto-lens-benchmarks
                 , proto-lens-protoc

Benchmark nested
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Nested.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.Nested
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family
                 , proto-lens
                 , proto-lens-benchmarks
                 , proto-lens-protoc

Benchmark unused-fields
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          UnusedFields.hs
    hs-source-dirs:   benchmarks
    other-modules:    Proto.UnusedFields
    ghc-options:      -O2 -rtsopts
    build-depends: base
                 , criterion
                 , deepseq
                 , lens-family
                 , proto-lens
                 , proto-lens-benchmarks
                 , proto-lens-protoc
