name:                proto-lens-combinators
version:             0.1.0.0
synopsis:            Utilities functions to proto-lens.
description:
  Useful things for working with protos.

homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Zie Weaver
maintainer:          zearen+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens.Combinators
  build-depends:  proto-lens == 0.1.*
                , base == 4.8.*
                , data-default-class == 0.0.*
                , lens-family == 1.2.*
                , transformers == 0.4.*
