name:                proto-lens-combinators
version:             0.1.0.7
synopsis:            Utilities functions to proto-lens.
description:
  Useful things for working with protos.

homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Zie Weaver
maintainer:          zearen+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  tests/combinators.proto

custom-setup
  setup-depends: base >= 4.8 && < 4.11
               , Cabal
               , proto-lens-protoc == 0.2.*

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens.Combinators
  build-depends:  proto-lens >= 0.1 && < 0.3
                -- Used by the custom Setup script (for the test-suite).
                , proto-lens-protoc >= 0.1 && < 0.3
                , base >= 4.8 && < 4.11
                , data-default-class >= 0.0 && < 0.2
                , lens-family == 1.2.*
                , transformers >= 0.4 && < 0.6

Test-Suite combinators_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: combinators_test.hs
  hs-source-dirs: tests
  other-modules: Proto.Combinators
  build-depends: HUnit
               , base
               , lens-family
               , lens-family-core
               , proto-lens
               , proto-lens-combinators
               , proto-lens-protoc
               , test-framework
               , test-framework-hunit
