name:                proto-lens-descriptors
version:             0.2.2.0
synopsis:            Protocol buffers for describing the definitions of messages.
description:
    This package provides definitions for the 'proto-lens' package
    of message types which describe @.proto@ files.
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Proto.Google.Protobuf.Compiler.Plugin
      Proto.Google.Protobuf.Descriptor
  default-language:    Haskell2010
  build-depends:
      base >= 4.8 && < 4.11
    , containers == 0.5.*
    , bytestring == 0.10.*
    , data-default-class >= 0.0 && < 0.2
    , lens-family == 1.2.*
    , lens-labels == 0.1.*
    -- Specify an exact version of `proto-lens`, since it's tied closely
    -- to the generated code.
    , proto-lens == 0.2.2.0
    , text == 1.2.*
