name:                proto-lens-descriptors
version:             0.2.2.0
synopsis:            Protocol buffers for describing the definitions of messages.
description:
    This package provides definitions for the 'proto-lens' package
    of message types which describe @.proto@ files.
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Changelog.md

-- Make the corresponding .proto files available for other packages to import.
-- Usually this happens automatically as part of Data.ProtoLens.Setup,
-- but because of bootstrapping we don't use that module here.
data-dir: data
data-files:
    proto-lens-imports/google/protobuf/descriptor.proto
    proto-lens-imports/google/protobuf/compiler/plugin.proto

library
  hs-source-dirs:      src
  exposed-modules:
      Proto.Google.Protobuf.Compiler.Plugin
      Proto.Google.Protobuf.Compiler.Plugin'Fields
      Proto.Google.Protobuf.Descriptor
      Proto.Google.Protobuf.Descriptor'Fields
  default-language:    Haskell2010
  build-depends:
      base >= 4.9 && < 4.11
    , containers == 0.5.*
    , bytestring == 0.10.*
    , data-default-class >= 0.0 && < 0.2
    , lens-family == 1.2.*
    , lens-labels == 0.1.*
    -- Specify a more precise version of `proto-lens`, since it depends on
    -- the exact definition of the Message class.
    , proto-lens == 0.2.2.*
    , text == 1.2.*
