name:                proto-lens-discrimination
version:             0.1.0.0
synopsis:            Support for using proto-lens types with http://hackage.haskell.org/package/discrimination.
description:         Reflection-based implementations of Sort for proto-lens' generated types.

homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Andrew Pritchard
maintainer:          awpr+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files: tests/*.proto

library
  exposed-modules:     Data.ProtoLens.Sort
                     , Data.ProtoLens.Group
                     , Data.ProtoLens.Discrimination
  build-depends:       base >=4.8 && <4.9
                     , data-default >=0.5 && <0.6
                     , bytestring ==0.10.*
                     , contravariant >=1.3 && <1.5
                     , containers >=0.5 && <0.6
                     , discrimination >=0.2 && <0.3
                     , discrimination-ieee754 ==0.1.*
                     , lens-family ==1.2.*
                     , proto-lens ==0.1.*
                     , text ==1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite discrimination_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: disc_test.hs
  hs-source-dirs: tests
  other-modules: Proto.Enum
  build-depends: base
               , containers
               , data-default
               , discrimination
               , lens-family
               , HUnit
               , proto-lens
               , proto-lens-protoc
               , proto-lens-arbitrary
               , proto-lens-discrimination
               , test-framework
               , test-framework-quickcheck2
               , test-framework-hunit

