name:                proto-lens-protoc
version:             0.1.0.0
synopsis:            Protocol buffer compiler for the proto-lens library.
description:
  Turn protocol buffer files (.proto) into Haskell files (.hs) which
  can be used with the proto-lens package.
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judahjacobson@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.21

library
  exposed-modules:   Data.ProtoLens.Setup
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
        Cabal == 1.22.*
      , base == 4.8.*
      , bytestring == 0.10.*
      , containers == 0.5.*
      , data-default-class == 0.0.*
      , directory == 1.2.*
      , filepath == 1.4.*
      , lens-family == 1.2.*
      , process == 1.2.*
      , proto-lens == 0.1.0.0
      , text == 1.2.*
  reexported-modules:
      -- Modules that are needed by the generated Haskell files:
        Data.ByteString
      , Data.Default.Class
      , Data.Map
      , Data.ProtoLens
      , Data.ProtoLens.Message.Enum
      , Data.Text
      , Lens.Family2
      , Lens.Family2.Unchecked

executable proto-lens-protoc
  main-is:  protoc-gen-haskell.hs
  other-modules:
      Bootstrap.Proto.Google.Protobuf.Compiler.Plugin
      Bootstrap.Proto.Google.Protobuf.Descriptor
      Combinators
      Definitions
      Generate

  build-depends:
        base == 4.8.*
      , bytestring == 0.10.*
      , containers == 0.5.*
      , data-default-class == 0.0.*
      , filepath == 1.4.*
      , haskell-src-exts == 1.17.*
      , lens-family == 1.2.*
      -- Specify an exact version of `proto-lens`, since it's tied closely
      -- to the generated code.
      , proto-lens == 0.1.0.0
      , text == 1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
