name:                proto-lens-tests-dep
version:             0.1.0.1
synopsis:            Test package dependency.
description:
    This package exports a .proto file which is used by proto-lens-tests
    to test interpackage dependencies.
    .
    NOTE: The test needs a new package with its own .proto files,
    rather than using the ones in proto-lens-protobuf-types
    (google/protobuf/*.proto), since on some systems protoc has special logic
    and can resolve imports of those files automatically.
homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          proto-lens@googlegroups.com
copyright:           Google Inc.
category:            Data
build-type:          Custom
cabal-version:       >=1.10
extra-source-files: protos/test-dep/foo.proto

custom-setup
  setup-depends: base >= 4.8 && < 4.11
               , Cabal
               , proto-lens-protoc == 0.2.*

library
  exposed-modules:     Proto.TestDep.Foo
  default-language: Haskell2010
  build-depends: proto-lens-protoc, base
