name:                proto-lens
version:             0.1.0.2
synopsis:            A lens-based implementation of protocol buffers in Haskell.
description:
  The proto-lens library provides to protocol buffers using modern
  Haskell language and library patterns.  Specifically, it provides:
  .
  * Composable field accessors via lenses
  .
  * Simple field name resolution/overloading via type-level literals
  .
  * Type-safe reflection and encoding/decoding of messages via GADTs

homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judahjacobson+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens
                       Data.ProtoLens.Encoding
                       Data.ProtoLens.Field
                       Data.ProtoLens.Message
                       Data.ProtoLens.Message.Enum
                       Data.ProtoLens.TextFormat
  other-modules:       Data.ProtoLens.Encoding.Bytes
                       Data.ProtoLens.Encoding.Wire
                       Data.ProtoLens.TextFormat.Parser
  build-depends:  attoparsec == 0.13.*
                , base >= 4.8 && < 4.10
                , bytestring == 0.10.*
                , containers == 0.5.*
                , data-default-class == 0.0.*
                , lens-family == 1.2.*
                , parsec == 3.1.*
                , pretty == 1.1.*
                , text == 1.2.*
                , transformers >= 0.4 && < 0.6
                , void == 0.7.*
